[tool.poetry]
name = "streamlit_test"
version = "0.1.0"
description = ""
authors = ["TkrUdagawa <tkr.udagawa.lab@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
streamlit = "^0.83.0"
sklearn = "^0.0"
scikit-learn = "^0.24.2"
plotly = "^4.14.3"
matplotlib = "^3.4.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
